# trako

./: .dockerignore  .gitignore  Dockerfile  MANIFEST  Makefile  README.md  README.txt  main.log.txt  trako.cxx  trako.h  trako_0.1.0.orig.tar.gz.delta  trako_0.1.0.orig.tar.gz.id
debian/: changelog  control  copyright  docs  trako-dev.install
src/: CMakeLists.txt  main.cpp
src/trako/: Context.cpp  Context.h  Context.hpp  Duration.cpp  Duration.h  Duration.hpp  Makefile  MetaClass.cpp  MetaClass.h  MetaClass.hpp  MetaMutex.cpp  MetaMutex.h  MetaMutex.hpp  MetaScope.cpp  MetaScope.h  MetaScope.hpp  UtilsOf.cpp  UtilsOf.h  UtilsOf.hpp  config.cpp  config.h  lib.cpp  lib.h  macros.cpp  macros.h  trako.cpp  trako.cxx  trako.h
